# DocIntell

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  run-frontend.sh
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: auth.py  chat.py  documents.py  users.py
backend/app/core/: config.py  database.py  logging.py  security.py
backend/app/models/: __init__.py  conversation.py  document.py  user.py
backend/app/schemas/: chat.py  document.py  user.py
backend/app/services/: chat_service.py  document_processor.py  embedding_service.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_document_processor.py  test_documents.py
deployment/: prometheus.yml
deployment/grafana/dashboards/: docintell-dashboard.json
deployment/helm/: Chart.yaml  values.yaml
deployment/k8s/: backend.yaml  frontend.yaml  namespace.yaml  postgres.yaml  redis.yaml
docs/: API.md  DEPLOYMENT.md
frontend/: .eslintrc.json  .prettierignore  README.md  index.html  nginx.conf  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Layout.tsx
frontend/src/pages/: ChatPage.tsx  DashboardPage.tsx  DocumentsPage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/stores/: authStore.ts
frontend/src/test/: LoginPage.test.tsx  authStore.test.ts
scripts/: performance-test.js
